--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
     </div>
     <div id="menu">
-        <center><h1 class="br">Breakfast</h1></center>
+        <center><h1 class="br" style=" background-color: rgb(213, 157, 52);">Breakfast</h1></center>
         <div id="breakfast"><div class="bs"><img src="https://cdn.pixabay.com/photo/2016/03/27/21/59/bread-1284438_1280.jpg" id="bsimg" alt="">
             <h1>Croissants <br><span id="con">French Pastry</span></h1><button id="add">ADD</button></div>
             <div class="bs"><img src="https://cdn.pixabay.com/photo/2020/05/19/20/54/waffles-5192625_1280.jpg" id="bsimg" alt=""><h1>Waffles<br><span id="con">Grid Pancake</span></h1><button id="add">ADD</button></div>
